Update several code and rule

--- a/client/src/containers/AddPassword/addPassword.scss
+++ b/client/src/containers/AddPassword/addPassword.scss
@@ -1,20 +1,20 @@
 $red-accent: rgb(207, 0, 0);
 $red-clicked: rgb(56, 21, 21);
 
-.add-password-container{
+.add-password-container {
   width: 100%;
   margin-top: 50px;
   padding: 1px;
 
-  &--w100{
+  &--w100 {
     width: 100%;
   }
 
-  &--w90{
+  &--w90 {
     width: 100%;
   }
 
-  &--title{
+  &--title {
     margin-top: 50px;
     font-size: 35px;
     color: $red-accent;
@@ -22,12 +22,12 @@ $red-clicked: rgb(56, 21, 21);
     text-align: center;
   }
 
-  &--input{
+  &--input {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    &--input-bar{
+    &--input-bar {
       width: 100%;
       padding: 15px 10px;
       border: none;
@@ -36,7 +36,7 @@ $red-clicked: rgb(56, 21, 21);
       border-bottom: 1px solid $red-accent;
       transition: all 0.3s ease-in-out;
 
-      &:focus{
+      &:focus {
         outline: none;
         border: 1px solid red;
         border-radius: 4px;
@@ -44,15 +44,14 @@ $red-clicked: rgb(56, 21, 21);
     }
   }
 
-  &--widget{
-
-    &--widget-title{
+  &--widget {
+    &--widget-title {
       font-size: 20px;
       font-weight: normal;
       margin-bottom: 25px;
     }
 
-    &--widget-card{
+    &--widget-card {
       width: 100%;
       padding: 12px 10px;
       margin-bottom: 15px;
@@ -62,7 +61,7 @@ $red-clicked: rgb(56, 21, 21);
     }
   }
 
-  &--add-password-btn{
+  &--add-password-btn {
     // margin-top: 40px;
     border: none;
     font-size: 18px;
@@ -75,16 +74,16 @@ $red-clicked: rgb(56, 21, 21);
     transition: all 0.3s ease-in-out;
     border-radius: 6px;
 
-    &:hover{
+    &:hover {
       box-shadow: 3px 3px 9px 1px rgba(51, 51, 51, 0.5);
     }
 
-    &:active{
+    &:active {
       background-color: $red-clicked;
     }
   }
 
-  &--add-password-btn-delete{
+  &--add-password-btn-delete {
     // margin-top: 40px;
     border: none;
     font-size: 18px;
@@ -97,15 +96,34 @@ $red-clicked: rgb(56, 21, 21);
     transition: all 0.3s ease-in-out;
     border-radius: 6px;
 
-    &:hover{
+    &:hover {
       box-shadow: 3px 3px 9px 1px rgba(51, 51, 51, 0.5);
     }
 
-    &:active{
+    &:active {
+      background-color: $red-clicked;
+    }
+  }
+
+  &--add-password-btn-back {
+    // margin-top: 40px;
+    border: none;
+    font-size: 18px;
+    width: auto;
+    height: 40px;
+    background-color: rgb(28, 63, 177);
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border-radius: 6px;
+
+    &:hover {
+      box-shadow: 3px 3px 9px 1px rgba(51, 51, 51, 0.5);
+    }
+
+    &:active {
       background-color: $red-clicked;
     }
   }
 }
-
-
-
