--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -1,32 +1,34 @@
 $red-accent: rgb(207, 0, 0);
 
-.password-card{
+.password-card {
   width: 100%;
   height: 100px;
   background-color: rgb(245, 245, 245);
   color: rgb(48, 47, 47);
+  border: 1px solid rgb(139, 139, 139);
+  border-radius: 5px;
 
-  &--image-container{
+  &--image-container {
     width: 30%;
-    height: 100px;
+    height: 98px;
 
-    img{
+    img {
       max-height: 100%;
       object-fit: cover;
     }
   }
 
-  &--url-text{
+  &--url-text {
     margin-bottom: 7px;
     margin-top: 0px;
   }
 
-  &--email-text{
+  &--email-text {
     margin-top: 0px;
   }
 }
 
-.img{
+.img {
   z-index: 99999;
   cursor: pointer;
 }
